[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/msgBaseX/msgBaseX.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/startMsg/startMsg.gd" type="Script" id=2]

[node name="msgBaseX" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -820.0
margin_top = -410.0
margin_right = 820.0
margin_bottom = 410.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="." index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -816.0
margin_top = -390.0
margin_right = 818.0
margin_bottom = 412.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel" index="0"]
margin_left = 31.0
margin_top = 108.0
margin_right = 1605.0
margin_bottom = 678.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Panel/ScrollContainer" index="0"]
columns = 10

[node name="Label" type="Label" parent="Panel" index="1"]
margin_left = 539.76
margin_top = 65.4133
margin_right = 767.76
margin_bottom = 107.413
text = "选择本局出现生物系列"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Panel" index="2"]
margin_left = 665.805
margin_top = 12.6037
margin_right = 985.805
margin_bottom = 54.6037
text = "选择本局出现生物系列"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel" index="3"]
modulate = Color( 0.980392, 0.941176, 0.52549, 1 )
margin_left = 864.838
margin_top = 66.7207
margin_right = 1184.84
margin_bottom = 116.721
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="." index="1"]
margin_left = 767.445
margin_top = 725.928
margin_right = 872.653
margin_bottom = 778.303
text = "余下随机"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="." index="2"]
margin_left = 468.471
margin_top = 724.875
margin_right = 573.679
margin_bottom = 777.25
text = "全部取消"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="." index="3"]
visible = false
margin_left = 767.64
margin_top = 635.916
margin_right = 860.847
margin_bottom = 684.292
text = "退出"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_start" type="Button" parent="." index="4"]
visible = false
margin_left = 1140.92
margin_top = 722.632
margin_right = 1277.92
margin_bottom = 775.007
text = "继续"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="." index="5"]
visible = false
margin_left = 50.6503
margin_top = 466.536
margin_right = 156.65
margin_bottom = 514.912
text = "读取配置"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_btn" type="Button" parent="." index="6"]
visible = false
margin_left = 50.6503
margin_top = 529.186
margin_right = 152.65
margin_bottom = 577.562
text = "保存配置"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="button_down" from="btn_start" to="." method="_on_btn_start_button_down"]
